Module_01 fini et module_02 ex00 fini

--- a/module_00/ex00/Makefile
+++ b/module_00/ex00/Makefile
@@ -1,7 +1,7 @@
 NAME = megaphone
 
-CC = clang++
-CPPFLAGS = -Wall -Wextra -Werror
+CC = c++
+CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 RM = rm -rf
 
 SRCS = megaphone.cpp
