--- a/module_01/ex01/Makefile
+++ b/module_01/ex01/Makefile
@@ -1,12 +1,12 @@
-NAME = Phonebook
+NAME = Zombie
 
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 RM = rm -rf
 
-SRCS =	Phonebook.cpp	\
-		Contact.cpp		\
-		main.cpp
+SRCS =	main.cpp		\
+		zombieHorde.cpp	\
+		Zombie.cpp		\
 
 OBJS		=	$(SRCS:%.cpp=%.o)
 
