--- a/module_01/ex03/Makefile
+++ b/module_01/ex03/Makefile
@@ -1,12 +1,13 @@
-NAME = Phonebook
+NAME = Hit
 
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 RM = rm -rf
 
-SRCS =	Phonebook.cpp	\
-		Contact.cpp		\
-		main.cpp
+SRCS =	main.cpp	\
+		Weapon.cpp	\
+		HumanA.cpp	\
+		HumanB.cpp	\
 
 OBJS		=	$(SRCS:%.cpp=%.o)
 
