--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,17 +5,23 @@
 		"__debug": "cpp",
 		"__errc": "cpp",
 		"__functional_base": "cpp",
+		"__hash_table": "cpp",
 		"__locale": "cpp",
 		"__mutex_base": "cpp",
+		"__node_handle": "cpp",
 		"__nullptr": "cpp",
+		"__split_buffer": "cpp",
 		"__string": "cpp",
 		"__threading_support": "cpp",
 		"__tuple": "cpp",
 		"algorithm": "cpp",
+		"array": "cpp",
 		"atomic": "cpp",
 		"bitset": "cpp",
 		"cctype": "cpp",
 		"chrono": "cpp",
+		"cmath": "cpp",
+		"complex": "cpp",
 		"cstdarg": "cpp",
 		"cstddef": "cpp",
 		"cstdint": "cpp",
@@ -26,8 +32,11 @@
 		"cwchar": "cpp",
 		"cwctype": "cpp",
 		"exception": "cpp",
+		"optional": "cpp",
+		"fstream": "cpp",
 		"functional": "cpp",
 		"initializer_list": "cpp",
+		"iomanip": "cpp",
 		"ios": "cpp",
 		"iosfwd": "cpp",
 		"iostream": "cpp",
@@ -39,6 +48,8 @@
 		"mutex": "cpp",
 		"new": "cpp",
 		"ostream": "cpp",
+		"ratio": "cpp",
+		"sstream": "cpp",
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
 		"string": "cpp",
@@ -47,17 +58,8 @@
 		"tuple": "cpp",
 		"type_traits": "cpp",
 		"typeinfo": "cpp",
-		"utility": "cpp",
-		"__hash_table": "cpp",
-		"__node_handle": "cpp",
-		"__split_buffer": "cpp",
-		"array": "cpp",
-		"cmath": "cpp",
-		"complex": "cpp",
-		"optional": "cpp",
-		"ratio": "cpp",
-		"sstream": "cpp",
 		"unordered_map": "cpp",
+		"utility": "cpp",
 		"vector": "cpp"
 	}
 }
