--- a/module_01/ex04/Makefile
+++ b/module_01/ex04/Makefile
@@ -1,12 +1,10 @@
-NAME = Phonebook
+NAME = Replace
 
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 RM = rm -rf
 
-SRCS =	Phonebook.cpp	\
-		Contact.cpp		\
-		main.cpp
+SRCS =	main.cpp	\
 
 OBJS		=	$(SRCS:%.cpp=%.o)
 
